--- a/contrib/nginx/zammad.conf
+++ b/contrib/nginx/zammad.conf
@@ -10,6 +10,11 @@ upstream zammad-websocket {
     server 127.0.0.1:6042;
 }
 
+map $http_x_forwarded_proto $real_scheme {
+    default $http_x_forwarded_proto;
+    '' $scheme;
+}
+
 server {
     listen 80;
 
@@ -33,7 +38,7 @@ server {
         proxy_set_header Connection "Upgrade";
         proxy_set_header CLIENT_IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $real_scheme;
         proxy_read_timeout 86400;
         proxy_pass http://zammad-websocket;
     }
@@ -42,7 +47,7 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header CLIENT_IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $real_scheme;
         proxy_read_timeout 300;
         proxy_pass http://zammad-railsserver;
 
